busybox: enable more features

--- a/package/utils/busybox/Config-defaults.in
+++ b/package/utils/busybox/Config-defaults.in
@@ -48,10 +48,10 @@ config BUSYBOX_DEFAULT_PID_FILE_PATH
 	default "/var/run"
 config BUSYBOX_DEFAULT_BUSYBOX
 	bool
-	default n
+	default y
 config BUSYBOX_DEFAULT_FEATURE_SHOW_SCRIPT
 	bool
-	default n
+	default y
 config BUSYBOX_DEFAULT_FEATURE_INSTALLER
 	bool
 	default n
@@ -1723,7 +1723,7 @@ config BUSYBOX_DEFAULT_MOUNTPOINT
 	default n
 config BUSYBOX_DEFAULT_NOLOGIN
 	bool
-	default n
+	default y
 config BUSYBOX_DEFAULT_NOLOGIN_DEPENDENCIES
 	bool
 	default n
@@ -2474,7 +2474,7 @@ config BUSYBOX_DEFAULT_NC
 	default y
 config BUSYBOX_DEFAULT_NETCAT
 	bool
-	default n
+	default y
 config BUSYBOX_DEFAULT_NC_SERVER
 	bool
 	default n
@@ -2540,7 +2540,7 @@ config BUSYBOX_DEFAULT_SSL_CLIENT
 	default n
 config BUSYBOX_DEFAULT_TC
 	bool
-	default n
+	default y
 config BUSYBOX_DEFAULT_FEATURE_TC_INGRESS
 	bool
 	default n
