build: shorten the source code
Signed-off-by: Huangbin Zhan <zhanhb88@gmail.com>

--- a/package/boot/kexec-tools/Makefile
+++ b/package/boot/kexec-tools/Makefile
@@ -67,8 +67,8 @@ CONFIGURE_ARGS = \
 		--sbindir=/usr/sbin \
 		--libexecdir=/usr/lib \
 		--sysconfdir=/etc \
-		$(if $(CONFIG_KEXEC_ZLIB),--with,--without)-zlib \
-		$(if $(CONFIG_KEXEC_LZMA),--with,--without)-lzma \
+		--with$(if $(CONFIG_KEXEC_ZLIB),,out)-zlib \
+		--with$(if $(CONFIG_KEXEC_LZMA),,out)-lzma \
 		TARGET_LD="$(TARGET_CROSS)ld"
 
 TARGET_CFLAGS += -ffunction-sections -fdata-sections
