--- a/package/network/services/dnsmasq/Makefile
+++ b/package/network/services/dnsmasq/Makefile
@@ -132,11 +132,8 @@ TARGET_CFLAGS += -flto
 TARGET_LDFLAGS += -flto=jobserver
 
 COPTS = -DHAVE_UBUS -DHAVE_POLL_H \
-	$(if $(CONFIG_IPV6),,-DNO_IPV6)
-
-ifeq ($(BUILD_VARIANT),nodhcpv6)
-	COPTS += -DNO_DHCP6
-endif
+	$(if $(CONFIG_IPV6),,-DNO_IPV6) \
+	$(if $(filter nodhcpv6,$(BUILD_VARIANT)),-DNO_DHCP6)
 
 ifeq ($(BUILD_VARIANT),full)
 	COPTS += $(if $(CONFIG_PACKAGE_dnsmasq_$(BUILD_VARIANT)_dhcp),,-DNO_DHCP) \
