--- a/package/libs/gettext-full/Makefile
+++ b/package/libs/gettext-full/Makefile
@@ -38,10 +38,7 @@ define Package/libintl-full
   ABI_VERSION:=8
 endef
 
-TARGET_CFLAGS += $(FPIC)
-ifneq ($(HOST_OS),Linux)
-  TARGET_CFLAGS += -I$(STAGING_DIR_HOSTPKG)/include
-endif
+TARGET_CFLAGS += $(FPIC) $(if $(CONFIG_HOST_OS_LINUX),,-I$(STAGING_DIR_HOSTPKG)/include)
 
 CONFIGURE_ARGS += \
 	--enable-shared \
