--- a/package/network/services/hostapd/Makefile
+++ b/package/network/services/hostapd/Makefile
@@ -46,15 +46,11 @@ LOCAL_TYPE=$(strip \
 
 LOCAL_AND_LIB_VARIANT=$(patsubst hostapd-%,%,\
 		      $(patsubst wpad-%,%,\
-		      $(patsubst supplicant-%,%,\
-		      $(BUILD_VARIANT)\
-		      )))
+		      $(BUILD_VARIANT:supplicant-%=%)))
 
 LOCAL_VARIANT=$(patsubst %-internal,%,\
 	      $(patsubst %-openssl,%,\
-	      $(patsubst %-wolfssl,%,\
-	      $(LOCAL_AND_LIB_VARIANT)\
-	      )))
+	      $(LOCAL_AND_LIB_VARIANT:%-wolfssl=%)))
 
 SSL_VARIANT=$(strip \
 		$(if $(findstring openssl,$(LOCAL_AND_LIB_VARIANT)),openssl,\
@@ -428,7 +424,7 @@ define Package/hostapd-utils
   SUBMENU:=WirelessAPD
   TITLE:=IEEE 802.1x Authenticator (utils)
   URL:=http://hostap.epitest.fi/
-  DEPENDS:=@$(subst $(space),||,$(foreach pkg,$(HOSTAPD_PROVIDERS),PACKAGE_$(pkg)))
+  DEPENDS:=@$(subst $(space),||,$(HOSTAPD_PROVIDERS:%=PACKAGE_%))
   VARIANT:=*
 endef
 
@@ -441,7 +437,7 @@ define Package/wpa-cli
   SECTION:=net
   CATEGORY:=Network
   SUBMENU:=WirelessAPD
-  DEPENDS:=@$(subst $(space),||,$(foreach pkg,$(SUPPLICANT_PROVIDERS),PACKAGE_$(pkg)))
+  DEPENDS:=@$(subst $(space),||,$(SUPPLICANT_PROVIDERS:%=PACKAGE_%))
   TITLE:=WPA Supplicant command line control utility
   VARIANT:=*
 endef
