--- a/tools/coreutils/Makefile
+++ b/tools/coreutils/Makefile
@@ -20,7 +20,7 @@ BUILD_PROGRAMS = date readlink touch ln chown
 
 include $(INCLUDE_DIR)/host-build.mk
 
-BUILD_BINS = $(patsubst %,src/%,$(BUILD_PROGRAMS))
+BUILD_BINS = $(BUILD_PROGRAMS:%=src/%)
 
 HOST_CONFIGURE_ARGS += \
 	 --enable-install-program=$(subst $(space),$(comma),$(strip $(BUILD_PROGRAMS)))
